# pmbi

./: .gitignore  README.md  flake.nix  pyproject.toml  pyproject_poetry.toml
.github/workflows/: python-app.yml
pmbi/: io.py  lib.py  plotting.py
pmbi/airr/: airr_from_mixcr.py  data_commons.py  schema.py
pmbi/anndata/: get.py  io.py  random.py  util.py
pmbi/cellranger/: 1_metadata_to_samplesheet.py  1_mkfastq.py  2_mkfastq.py  3_make_cellranger_table.py  cellranger_aggr_generator_aws.py  cellranger_command.py  cellranger_count_generator_awspcluster.py  cellranger_multi_s3_generate_important_outs_from_outs.bash  cellranger_untar_multi_outs.py  make_cellranger_table.py
pmbi/s3/: s3-abort-all-multipart-uploads.py  s3-multipart-upload.py
pmbi/snakemake/: lib.py
pmbi/tools/: gene_expression_summary.py
pmbi/wrappers/: scanpy.py  scvi.py
reports/: generate.bash  scvdj.qmd  scvdj.quarto_ipynb
scripts/: anndata_export.py  anndata_melt.py  anndata_to_mtx.py  assembly_contig_sizes.py  assembly_stats.py  bam_counts.py  batch_get_marginal_ll.sh  breastvax_mouse.py  cdiff_evo_figures.py  cdiff_evol_snp_table.py  combine_fastq.py  compare_checksum_lists.py  compare_lists.py  contig_lengths.py  fasta_replace_degenerate_nucleotides.py  fastq_count_indices.py  fastq_crop.py  fastq_to_fasta.py  find_broken_symlinks.py  gene_ranges.py  get_marginal_ll.py  get_normalized_expression_scvi.py  get_normalized_expression_totatlvi.py  mulitvi_train.py  palettables.py  parse_index_counts.py  parse_psl.py  parse_psl_orig.py  pretty_print_json.py  process_cellranger.py  read_cellranger-arc.py  revcomp_ss_bcl2fastq.py  run_amulet.sh  run_mixcr.py  samtools_depth_to_bsr_array.py  sc_run_std_gex.py  scvi_de.py  scvi_get_norm_expr.py  scvi_train.py  scvitools_train.py  (+5 more)
snakemake/atac_seq/: Snakefile
snakemake/pipelines/atac_seq/: Snakefile  config.toml
snakemake/pipelines/gatk/: Snakefile  config.toml
snakemake/pipelines/kallisto/: Snakefile
snakemake/setup/: activate_snakemake.bash  install_snakemake.bash
src/pmbi/: clustering.py  collections.py  error.py  file_handlers.py  geometry.py  io.py  lib.py  logging.py  plotting.py  stats.py  sync.py  util.py
src/pmbi/airr/: airr_from_mixcr.py  util.py
src/pmbi/anndata/: get.py  io.py  util.py
src/pmbi/bio/: dna.py  entrez.py  fastq.py  gtf.py  snpeff.py  vcf.py
src/pmbi/cellranger/: 1_make_bcl2fastq_samplesheet.py  2_mkfastq.py  3_make_cellranger_table.py  cellranger_aggr_pull_important_outs.bash  cellranger_arc_qc_figures.py  cellranger_command.py  cellranger_command_old.py  collections.py  config.py  config.toml  config_template.py  globals.py  make_cellranger_output_files_unique.py  multiplets.py  rna_velocity.py  runners.py  units.py  util.py
src/pmbi/config/: __init__.py  _config.py  item.py
tests/: test_anndata_random.py  test_anndata_utils.py  test_cellranger.py  test_cellranger_samplesheet.py
tests/pmbi/: test_file_sync.py
(+42 files in other folders)
