[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src/pmbi",
"/tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.basedpyright]
typeCheckingMode = "standard"

[project]
name = "pmbi"
version = "0.1.0"
description = ""
authors = [
    { name = "amsesk", email =" amsesk@umich.edu" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mudata>=0.2.3",
    "scipy>=1.13.0",
    "squidpy>=1.6.1",
    "seaborn>=0.13.2",
    "ipython>=8.24.0",
    "scanpy>=1.10.1",
    "scirpy>=0.16.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "muon>=0.1.6",
    "biopython>=1.84",
    "pysam>=0.22.1",
    "joblib>=1.4.2",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "lxml[html-clean]>=5.3.0",
    "palettable>=3.3.3",
    "airr@git+https://github.com/airr-community/airr-standards.git#egg=master#subdirectory=lang/python",
    "munch>=4.0.0",
    "boto3>=1.35.66",
    "openpyxl",
    "tifffile",
    "imagecodecs",
    "pyvcf3",
    ]

[project.optional-dependencies]
gpu = [
    "scvi-tools>=1.1.2",
    "torch>=2.3.0"
    ]
dev = [
    "black@git+https://github.com/psf/black#egg=master",
    "basedpyright",
    "isort>=5.13.2",
    "debugpy>=1.8.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0"
    ]
publish = [
    "jupyter>=1.0.0"
    ]

